PR port-sparc64/53830: adapt QEMU workarounds to newer OpenBIOS device tree layout.